--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,10 @@
     <finalName>taglibs-${project.version}</finalName>
     <resources>
       <resource>
-        <directory>${project.basedir}/resources</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <includes>
+          <include>META-INF/*.tld</include>
+        </includes>
         <excludes>
           <exclude>WEB-INF</exclude>
         </excludes>
