--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
       <version>${component.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
