--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,19 @@
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.1_1-SNAPSHOT</version>
+  <version>5.1-SNAPSHOT</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
+  <scm>
+    <connection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</developerConnection>
+    <url>https://www.silverpeas.org/svn/websites/professional-edition/taglibs/</url>
+  </scm>
+
   <properties>
-    <core.version>5.1.1</core.version>
-    <component.version>5.1.1</component.version>
+    <core.version>5.1.3</core.version>
+    <component.version>5.1.3</component.version>
   </properties>
 
 
