--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -12,14 +11,14 @@
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.1-SNAPSHOT</version>
+  <version>5.1</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</developerConnection>
-    <url>https://www.silverpeas.org/svn/websites/professional-edition/taglibs/</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/tags/taglibs-5.1</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/tags/taglibs-5.1</developerConnection>
+    <url>https://www.silverpeas.org/svn/websites/professional-edition/taglibs/tags/taglibs-5.1</url>
   </scm>
 
   <properties>
