--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
   </scm>
 
   <properties>
-    <core.version>5.3.1</core.version>
-    <component.version>5.3.1</component.version>
+    <core.version>5.4-SNAPSHOT</core.version>
+    <component.version>5.4-SNAPSHOT</component.version>
   </properties>
 
 
