--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>14</version>
+    <version>16</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
@@ -16,7 +16,7 @@
   <url>http://www.silverpeas.com</url>
 
 
-   <distributionManagement>
+  <distributionManagement>
     <repository>
       <id>silverpeas</id>
       <name>Repository Silverpeas</name>
@@ -36,10 +36,25 @@
     <developerConnection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</developerConnection>
     <url>https://www.silverpeas.org/svn/websites/professional-edition/taglibs/</url>
   </scm>
+  
+  <repositories>
+    <repository>
+      <id>NexusSilverpeas</id>
+      <layout>default</layout>
+      <name>Silverpeas Repository</name>
+      <url>http://www.silverpeas.org/nexus/content/groups/silverpeas</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <properties>
-    <core.version>5.4-SNAPSHOT</core.version>
-    <component.version>5.4-SNAPSHOT</component.version>
+    <core.version>5.4.1</core.version>
+    <component.version>5.4.1</component.version>
   </properties>
 
 
