--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>16</version>
+    <version>17-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.4-SNAPSHOT</version>
+  <version>5.5-SNAPSHOT</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
@@ -36,7 +36,7 @@
     <developerConnection>scm:svn:https://www.silverpeas.org/svn/websites/professional-edition/taglibs/trunk</developerConnection>
     <url>https://www.silverpeas.org/svn/websites/professional-edition/taglibs/</url>
   </scm>
-  
+
   <repositories>
     <repository>
       <id>NexusSilverpeas</id>
@@ -53,8 +53,8 @@
   </repositories>
 
   <properties>
-    <core.version>5.4.1</core.version>
-    <component.version>5.4.1</component.version>
+    <core.version>5.5-SNAPSHOT</core.version>
+    <component.version>5.5-SNAPSHOT</component.version>
   </properties>
 
 
@@ -62,6 +62,10 @@
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-j2ee_1.4_spec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -126,7 +130,6 @@
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>comment</artifactId>
-      <classifier>client</classifier>
       <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
