--- a/src/main/resources/WEB-INF/web.xml
+++ b/src/main/resources/WEB-INF/web.xml
@@ -1,30 +1,21 @@
-<?xml version="1.0"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN" "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
-<taglib>
-	<taglib-uri>silverpeas</taglib-uri>
-	<taglib-location>/WEB-INF/lib/taglibs-${project.version}.jar</taglib-location>
-</taglib>
-<taglib>
-	<taglib-uri>struts</taglib-uri>
-	<taglib-location>/WEB-INF/lib/struts.jar</taglib-location>
-</taglib>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-<servlet>
-	<servlet-name>WebFileServer</servlet-name>
-	<display-name>WebFileServer</display-name>
-	<description>no description</description>
-	<servlet-class>com.silverpeas.tags.servlets.WebFileServer</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>WebFileServer</servlet-name>
-	<url-pattern>/attached_file/*</url-pattern>
-</servlet-mapping>
+  <servlet>
+    <servlet-name>WebFileServer</servlet-name>
+    <display-name>WebFileServer</display-name>
+    <description>no description</description>
+    <servlet-class>com.silverpeas.tags.servlets.WebFileServer</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>WebFileServer</servlet-name>
+    <url-pattern>/attached_file/*</url-pattern>
+  </servlet-mapping>
 
-<error-page>
-	<exception-type>java.lang.Throwable</exception-type>
-	<location>printErrors.jsp</location>
-</error-page>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>printErrors.jsp</location>
+  </error-page>
 
 </web-app>
