--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
       <id>silverpeas</id>
       <name>Repository Silverpeas</name>
       <layout>default</layout>
-      <url>http://www.silverpeas.org/nexus/content/repositories/non-free/</url>
+      <url>https://www.silverpeas.org/nexus/content/repositories/sp-non-free/</url>
     </repository>
     <snapshotRepository>
       <id>silverpeas-snapshots</id>
       <name>Snapshots Repository Silverpeas</name>
       <layout>default</layout>
-      <url>http://www.silverpeas.org/nexus/content/repositories/snapshots-non-free/</url>
+      <url>https://www.silverpeas.org/nexus/content/repositories/sp-dev-non-free/</url>
     </snapshotRepository>
   </distributionManagement>
 
