--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>19</version>
+    <version>20</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
@@ -53,8 +53,8 @@
   </repositories>
 
   <properties>
-    <core.version>5.6-SNAPSHOT</core.version>
-    <component.version>5.6-SNAPSHOT</component.version>
+    <core.version>5.8-SNAPSHOT</core.version>
+    <component.version>5.8-SNAPSHOT</component.version>
   </properties>
 
 
@@ -89,103 +89,103 @@
     <dependency>
       <groupId>com.silverpeas.core</groupId>
       <artifactId>lib-core</artifactId>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core</groupId>
       <artifactId>web-core</artifactId>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>admin</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>authentication</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>pdc</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>node</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>publication</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>comment</artifactId>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>tagcloud</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>notation</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.core.ejb-core</groupId>
       <artifactId>searchengine</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.components.almanach</groupId>
       <artifactId>almanach-ejb</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.components.kmelia</groupId>
       <artifactId>kmelia-ejb</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.components.forums</groupId>
       <artifactId>forums-ejb</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.components.gallery</groupId>
       <artifactId>gallery-ejb</artifactId>
       <classifier>client</classifier>
-      <version>5.6</version>
+      <version>${component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
