--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>20</version>
+    <version>21</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
@@ -53,8 +53,8 @@
   </repositories>
 
   <properties>
-    <core.version>5.8-SNAPSHOT</core.version>
-    <component.version>5.8-SNAPSHOT</component.version>
+    <core.version>5.8</core.version>
+    <component.version>5.8</component.version>
   </properties>
 
 
