--- a/src/main/resources/WEB-INF/web.xml
+++ b/src/main/resources/WEB-INF/web.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <servlet>
     <servlet-name>WebFileServer</servlet-name>
-    <display-name>WebFileServer</display-name>
-    <description>no description</description>
     <servlet-class>com.silverpeas.tags.servlets.WebFileServer</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>WebFileServer</servlet-name>
     <url-pattern>/attached_file/*</url-pattern>
   </servlet-mapping>
-
+  <!--
   <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>printErrors.jsp</location>
   </error-page>
-
+  -->
 </web-app>
