--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>22-SNAPSHOT</version>
+    <version>22</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.9-SNAPSHOT</version>
+  <version>5.9</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
@@ -55,8 +55,8 @@
   </repositories>
 
   <properties>
-    <core.version>5.9-SNAPSHOT</core.version>
-    <component.version>5.9-SNAPSHOT</component.version>
+    <core.version>5.9</core.version>
+    <component.version>5.9</component.version>
   </properties>
 
 
