--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>25-SNAPSHOT</version>
+    <version>25</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
@@ -39,8 +39,8 @@
   </repositories>
 
   <properties>
-    <core.version>${project.version}</core.version>
-    <component.version>${project.version}</component.version>
+    <core.version>5.12</core.version>
+    <component.version>5.12</component.version>
   </properties>
 
 
