--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>25</version>
+    <version>26-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
@@ -39,8 +39,8 @@
   </repositories>
 
   <properties>
-    <core.version>5.12</core.version>
-    <component.version>5.12</component.version>
+    <core.version>5.13-SNAPSHOT</core.version>
+    <component.version>5.13-SNAPSHOT</component.version>
   </properties>
 
 
