--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>26</version>
+    <version>28-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.13.4</version>
+  <version>5.15-SNAPSHOT</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
@@ -39,7 +39,7 @@
   </repositories>
 
   <properties>
-    <silverpeas.version>5.13.4</silverpeas.version>
+    <silverpeas.version>5.15-SNAPSHOT</silverpeas.version>
   </properties>
 
 
