--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.silverpeas</groupId>
   <artifactId>taglibs</artifactId>
   <packaging>jar</packaging>
-  <version>5.14.3</version>
+  <version>5.14.4-SNAPSHOT</version>
   <name>taglibs J2EE 1.4 Webapp</name>
   <url>http://www.silverpeas.com</url>
 
@@ -39,7 +39,7 @@
   </repositories>
 
   <properties>
-    <silverpeas.version>5.14.3</silverpeas.version>
+    <silverpeas.version>5.14.4-SNAPSHOT</silverpeas.version>
   </properties>
 
 
